--- a/README
+++ b/README
@@ -9,5 +9,5 @@ https://c3voc.de
 # media.ccc.de
 https://media.ccc.de
 
-# ccc
+# chaos computer club
 https://en.wikipedia.org/wiki/Chaos_Computer_Club
